# vapour

./: README.md  environment-win.yaml  environment-wsl.yaml  start_backend.sh  start_ui.sh  start_workers.sh  steam.py  steamlink_resswitch.py
backend/: README.md  pyproject.toml
backend/tests/: test_steam.py
backend/tests/data/: appmanifest_379720.acf
backend/vapour/: steam.py  workers.py
backend/vapour/api/: main.py  models.py
backend/vapour/facades/: __init__.py  apps.py  config.py  disks.py  environment.py
backend/vapour/facades/tests/: test_disks.py
facades/: __init__.py  apps.py  config.py  disks.py
sql/: create_gameadmin_database.sql
tests/: test_steam.py
vapour/: steam.py
vapour/api/: main.py  models.py
vapour/facades/: __init__.py  apps.py  config.py  disks.py  environment.py  fsutil.py  logging.py
vapour/tests/: test_steam.py
vapourui/: README.md  package.json
vapourui/public/: index.html
vapourui/src/: App.css  App.js
vapourui/src/components/: Accordion.js  Archive.js  ArchiveButton.js  ArchiveChart.js  GameModal.js  GameTable.js  Library.js  LibraryChart.js  LibrarySet.js  LibraryTable.js
vapourui/src/services/: libraryService.js
